[rd] CSS, JS. INDEX, MAIN PAGE, CALIMS(All) read long
DONE:
Re-write most of css.
Done Js.
Done index
    - Lost Register buttons
    - Added "forgot password"
    - Lost forgot password buttons
    - Added Logo
    - Fixed modals
Done Main Page
    - Fixed Account modal
    - Fixed Contact modal
    - Removed Support modal
    - Fixed Logout Modal
    - Fixed Drop down
    - Logo Broken.
    - Changed postion of title & drop down
    - Fixed Policies & buttons
    - Tried to add search [FAILED]
CLAIMS
  Fire - Done
  Home - Done
  Motor - Done
  Pet - Done
  Questions
    - Changed Questions
    -Ficed Logo
    - Fixed All modal
  Technology - Done
  Theft - Done
  unable_fire
  unable_home
  unable_pet
  unable_theft
  unable_tech

--- a/claims/Home.html
+++ b/claims/Home.html
@@ -17,7 +17,7 @@
             <button type="submit">Submit</button>
           </div>
           <div class="container_var">
-            <button type="button" class="cancelbtn"><a href="../mainpage.html">Go Home</a></button>
+            <a href="../mainpage.html"><button type="button" class="cancelbtn">Go Home</button></a>
           </div>
      </form>
    </div>
