--- a/claims/motor.html
+++ b/claims/motor.html
@@ -11,19 +11,19 @@
         <div class="imgcontainer">
         </div>
           <div class="container">
-            <label for="uname"><b>You're claiming for:</b></label>
+            <label for="uname"><b><h1>You're claiming for:</h1></b></label>
             <input disabled type="text" placeholder="Motor cover" name="uname" required>
-            <label for="uname"><b>Vehicle</b>
+            <label for="uname"></label>
             <input type="text" list="numplates" name="number plates" placeholder="Enter your vehicle number plate" name="uname" required  /></label>
             <datalist id="numplates">
               <option value="YG12 2JD">
               <option value="DH23 1HD">
               <option value="ur4 f1n">
             </datalist>
-            <button type="submit">Submit</button>
+            <button type="submit"><h2>Submit</h2></button>
           </div>
           <div class="container_var">
-            <button type="button" class="cancelbtn"><a href="../mainpage.html">Go Home</a></button>
+            <a href="../mainpage.html"><button type="button" class="cancelbtn"><h2>Go Home</h2></button></a>
           </div>
      </form>
    </div>
