--- a/claims/pet.html
+++ b/claims/pet.html
@@ -1,21 +1,21 @@
 <html>
 <head>
-  <title>Claming - Theft</title>
+  <title>Claming - Lost pet</title>
   <link href="../CSS.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 <div id="outerbox">
     <div id="main">
-      <h2 style="text-align: center;">Covea claiming for theft</h2>
-      <form action="./unable_theft.html" method="post">
+      <h2 style="text-align: center;">Covea claiming for a lost pet</h2>
+      <form action="./unable_pet.html" method="post">
         <div class="imgcontainer">
         </div>
 
           <div class="container">
             <label for="uname"><b><h1>You're claiming for:</h1></b></label>
-            <input disabled type="text" placeholder="Theft cover" name="uname" required>
-            <label for="uname"><b>Items lost</b></label>
-            <input type="text" placeholder="TV, Chair, Car" name="uname" required>
+            <input disabled type="text" placeholder="Lost pet cover" name="uname" required>
+            <label for="uname"><b>Pets name</b></label>
+            <input type="text" placeholder="Buddy.." name="uname" required>
             <button type="submit"><h2>Submit</h2></button>
           </div>
           <div class="container_var">
