--- a/claims/Fire.html
+++ b/claims/Fire.html
@@ -12,14 +12,14 @@
         </div>
 
           <div class="container">
-            <label for="uname"><b>You're Claiming for:</b></label>
+            <label for="uname"><h1>You're Cliaming for:</h1></label>
             <input disabled type="text" placeholder="Fire cover" name="uname" required>
-            <label for="uname"><b>rooms damaged</b></label>
-            <input type="text" placeholder="1,2,3..." name="uname" required>
-            <button type="submit">Submit</button>
+            <label for="uname"></label>
+            <input type="text" placeholder="How many rooms where damaged?..." name="uname" required>
+            <button type="submit"><h2>Submit</h2></button>
           </div>
           <div class="container_var">
-            <button type="button" class="cancelbtn"><a href="../mainpage.html">Go Home</a></button>
+            <a href="../mainpage.html"><button type="button" class="cancelbtn"><h2>Go Home</h2></button></a>
           </div>
      </form>
    </div>
