--- a/claims/Technology.html
+++ b/claims/Technology.html
@@ -11,14 +11,14 @@
         <div class="imgcontainer">
         </div>
           <div class="container">
-            <label for="uname"><b>You're claiming for:</b></label>
+            <label for="uname"><b></h1>You're claiming for:</h1></b></label>
             <input disabled type="text" placeholder="Technology Cover" name="uname" required>
             <label for="uname"><b>Amount of devices</b></label>
             <input type="text" placeholder="£..." name="uname" required>
-            <button type="submit">Submit</button>
+            <button type="submit"><h2>Submit</h2></button>
           </div>
           <div class="container_var">
-            <a href="../mainpage.html"><button type="button" class="cancelbtn">Go Home</button></a>
+            <a href="../mainpage.html"><button type="button" class="cancelbtn"><h2>Go Home</h2></button></a>
           </div>
      </form>
    </div>
