[rd] Result, Questions chnaged

--- a/claims/Questions.html
+++ b/claims/Questions.html
@@ -236,12 +236,12 @@
         </form>
       </div>
       <div id="id11" class="modal"> <!--If so, How badly?-->
-        <form class="modal-content animate" action="./awaiting.html" method="post">
+        <form class="modal-content animate" action="./Result.html" method="post">
           <div class="imgcontainer">
             <img src="../images/Logo.png" alt="Covea logo" width="200px" height="200px">
             <label for="title"></label>
               <span onclick="document.getElementById('id11').style.display='none', document.getElementById('close').style.display='block'" class="close" title="Close">&times;</span>
-            <input type="p" list="title_list" placeholder="PREMIUME!" name="title">
+              <label for="DATE"><h1>PREMIUM</h1></label>
           </div>
           <div class="container">
             <label for="confirm"><b>You're entitled to our advance service please confirm</b></label required><br>
