--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <br><button class="main_login" style="background-color:#0e1616"><h2>Forgotten Your password?</h2></button><onclick="document.getElementById('id02').style.display='block'" -->
         <!--Uses login to creat a pop up box-->
         <div id="id01" class="modal">
-          <form class="modal-content animate" action="./mainpage.html" method="post"><!--What it should do when confirmed-->
+          <form class="modal-content animate"><!--What it should do when confirmed-->
             <div class="container">
               <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
                 <img src="./images/Logo.png" alt="Covea Logo"><br>
@@ -26,7 +26,7 @@
                 <input type="number"name="uname" placeholder="Enter Your Policy Number..."required> <!--Allows user to input policy number in as a text field--> <!-- min="6" max="531441" -->
                 <label for="psw"></label>
                 <input type="password" placeholder="Enter Your Password..." name="psw" required> <!--Allows users to put password in-->
-                <button type="submit" style="width:20%; height: auto"><h5>Login</h5></button>
+                <a href="./mainpage.html"><button type="button" style="width:20%; height: auto"><h5>Login</h5></button></a>
               </label>
               <label>
                   <input type="checkbox" checked="checked" name="remember"> Remember me
